# multiwii-proxy-python

./: .buildinfo  .gitignore  README.md  example.py  genindex.html  index.html  multiwii.commands.html  multiwii.config.html  multiwii.data.html  multiwii.html  multiwii.messaging.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  test.py
.doctrees/: environment.pickle  index.doctree  multiwii.commands.doctree  multiwii.config.doctree  multiwii.data.doctree  multiwii.doctree  multiwii.messaging.doctree
WiiProxy/: WiiProxy.py  __init__.py
_modules/: index.html  multiwii.html
_sources/: index.rst.txt  multiwii.config.rst.txt  multiwii.messaging.rst.txt
docs/: build.py  conf.py  index.rst  modules.rst  multiwii.commands.rst  multiwii.config.rst  multiwii.data.rst  multiwii.rst  wiiproxy.command.rst  wiiproxy.commands.rst  wiiproxy.config.rst  wiiproxy.data.box.rst  wiiproxy.data.info.rst  wiiproxy.data.motor.rst  wiiproxy.data.navigation.rst  wiiproxy.data.pid.rst  wiiproxy.data.rc.rst  wiiproxy.data.rst  wiiproxy.data.servo.rst  wiiproxy.data.telemetry.rst  wiiproxy.messaging.rst  wiiproxy.multiwii.rst  wiiproxy.rst
examples/: arm_disarm_example.py  arm_disarm_vehicle_example.py  example.py  print_module_members_example.py  print_rc_channels_example.py  print_vehicle_info_example.py
multiwii/: __init__.py
src/: MultiWiiCommand.py  MultiWiiCommands.py  WiiProxy.py  _MultiWiiData.py  __init__.py
tests/: __init__.py  test_multiwii.py
v1/: .gitignore  README.md
v2/: setup.py
wiiproxy/: MspMessage.py  (+25 more)
(+231 files in other folders)
